--- a/styles.css
+++ b/styles.css
@@ -3,3 +3,9 @@
 body {
     font-family: 'Montserrat', sans-serif;
 }
+/**container**/
+
+.container {
+    padding-left: 1rem;
+    padding-right: 1rem;
+}
