--- a/styles.css
+++ b/styles.css
@@ -32,3 +32,14 @@ body {
     border-radius: 0.5rem;
     border: 1px solid var(--primary-color) ;
 }
+
+/** search BEM naming convention for CSS**/
+
+/**lists**/
+
+.list-non-bullet{
+    list-style: none;
+}
+.list-item-inline{
+    display: inline;
+}
