--- a/styles.css
+++ b/styles.css
@@ -69,3 +69,12 @@ hr {
 .navigation .link-active{
     font-weight: bold;
 }
+/** header **/
+.hero{
+    padding: 2rem;
+}
+.hero .hero-img{
+    max-width: 350px;
+    display: block;
+    margin: auto;
+}
