--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
 
 :root{
-    --primary-color: #A7F3D0;
+    --primary-color: #D1FAE5
+    ;
 }
 
 body {
