--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@
     ;
     --dark-green: #064E3B;
     --dark-gray: #6B7280;
+    --off-white: #F3F4F6;
 }
 
 body {
@@ -86,4 +87,15 @@ hr {
     ;
     padding-top: 1rem;
     text-align: center;
+}
+
+/** section **/
+.section {
+    padding: 2rem;
+}
+.section h1 {
+    text-align: center;
+}
+.ow{
+    background-color: var(--off-white);
 }
