--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,11 @@ body {
 hr {
     margin: 2rem 0rem;
 }
+.head-color{
+    background-color: var(--primary-color);
+    padding: 1rem;
+    border-radius: 1rem;
+}
 /**container**/
 
 .container {
@@ -39,6 +44,9 @@ hr {
     color: var(--dark-green);
     border-radius: 0.5rem;
     border: 1px solid var(--primary-color) ;
+}
+.link-center{
+    text-align: center;
 }
 
 /** search BEM naming convention for CSS**/
