--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
 
-:root{
-    --primary-color: #D1FAE5
-    ;
+:root {
+    --primary-color: #D1FAE5;
     --dark-green: #064E3B;
     --dark-gray: #6B7280;
     --off-white: #F3F4F6;
@@ -12,40 +11,48 @@ body {
     font-family: 'Montserrat', sans-serif;
     margin: 0px;
 }
+
 hr {
     margin: 2rem 0rem;
 }
-.head-color{
+
+.head-color {
     background-color: var(--primary-color);
     padding: 1rem;
     border-radius: 1rem;
 }
+
 /**container**/
 
 .container {
     padding-left: 1rem;
     padding-right: 1rem;
 }
-.container-center{
+
+.container-center {
     max-width: 600px;
     margin: auto;
 }
+
 /** links **/
-.link{
+.link {
     text-decoration: none;
     padding: 0.5rem 1rem;
 }
+
 .link-primary {
-   background-color:var(--primary-color);
-   border-radius: 0.5rem;
-   color: var(--dark-green);
+    background-color: var(--primary-color);
+    border-radius: 0.5rem;
+    color: var(--dark-green);
 }
-.link-secondary{
+
+.link-secondary {
     color: var(--dark-green);
     border-radius: 0.5rem;
-    border: 1px solid var(--primary-color) ;
+    border: 1px solid var(--primary-color);
 }
-.link-center{
+
+.link-center {
     text-align: center;
 }
 
@@ -53,55 +60,63 @@ hr {
 
 /**lists**/
 
-.list-non-bullet{
+.list-non-bullet {
     list-style: none;
     text-align: center;
     padding-inline-start: 0px;
 }
-.list-item-inline{
+
+.list-item-inline {
     display: inline;
     padding: 0rem 0.5rem;
     text-align: center;
 }
-.list-ordered-center{
+
+.list-ordered-center {
     text-align: center;
     list-style-position: inside;
     padding-inline-start: 0px;
 }
+
 /** navigation**/
 
-.navigation{
+.navigation {
     background-color: var(--primary-color);
-    color: var(--dark-green)
-    ;
+    color: var(--dark-green);
     padding: 1rem;
     border-radius: 1rem;
 }
-.navigation .nav-brand{
+
+.navigation .nav-brand {
     font-weight: bold;
     font-size: 1.1rem;
 }
-.navigation .nav-pills{
+
+.navigation .nav-pills {
     text-align: right;
 }
+
 .navigation .link {
     color: var(--dark-green);
 }
-.navigation .link-active{
+
+.navigation .link-active {
     font-weight: bold;
 }
+
 /** header **/
-.hero{
+.hero {
     padding: 2rem;
 }
-.hero .hero-img{
+
+.hero .hero-img {
     max-width: 350px;
     display: block;
     margin: auto;
 }
-.hero .hero-heading{
-    color: var(--dark-gray)
-    ;
+
+.hero .hero-heading {
+    color: var(--dark-gray);
     padding-top: 1rem;
     text-align: center;
 }
@@ -110,23 +125,28 @@ hr {
 .section {
     padding: 2rem;
 }
+
 .section h1 {
     text-align: center;
 }
-.ow{
+
+.ow {
     background-color: var(--off-white);
 }
+
 /** footer **/
-.footer{
+.footer {
     background-color: var(--primary-color);
     padding: 2rem 0rem;
     border-radius: 1rem;
     text-align: center;
     color: var(--dark-green);
 }
-.footer .link{
+
+.footer .link {
     color: var(--dark-green);
 }
-.footer ul{
+
+.footer ul {
     padding-inline-start: 0px;
 }
